added git repo to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Convert xml string to neatly formatted JSON object",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zerico007/xml-json"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
